2015-02-15 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckBinFiles): Skip
	symlinks.

2015-02-14 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdConfMain): Add missing command
	continuation backslash while testing configure.in

2015-02-12 Thu  Jari Aalto  <jari.aalto@cante.net>

	* doc/Makefile (realclean): New.
	(index.html, index.txt): rework targets.

	* bin/lib/cygbuild.pl: (PACKAGE MAINTENANCE COMMANDS::HELP::other
	commands::download): Add new option -c|--clean to remove cache.
	Document location of cache file and its automatic update time of 7
	days. Add new option -a|--arch to download package by
	architecture.

	* bin/cygbuild.sh (CygbuildCmdDownloadCygwinPackage): Add option
	-c|--clean to remove cache. Lower cache update time from 30 days
	to 7 days. Add new option -a|--arch to download package by
	architecture.
	(CygbuildConfigGuessDownload): New.
	(CygbuildCmdFileUpdateConfigs): New.

2015-02-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallFixEtcdirInstall):
	Correct for loop which checks preremove postinstall.
	Incorectly added absolute paths to LIST which cause tar
	to use full path names.

2014-06-16 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildMakefileRunTarget): Return 0
	if no makefile.
	(CygbuildCmdBuildStdMakefile): Adjust message.
	(CygbuildInstallFixEtcdirInstall): No action if etc/ is empty

	* bin/lib/cygbuild.pl: (GLOBAL::$systemName): Read NAME
	before DEBFULLNAME.

2014-06-15 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::Patch management commands):
	Document */tmp/* or /*.tmp/* directories in "patch" command.

	* bin/cygbuild.sh: (CygbuildPatchFileList): Disregard
	files in */tmp/* or /*.tmp/* directories
	(CygbuildPatchApplyQuiltMaybe): Improve checking of
	quilt status code.
	(CygbuildCmdInstallList): Warn about unknown variables.

2014-06-14 Sat  Jari Aalto  <jari.aalto@cante.net>
